k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kroknes-web
    namespace: kroknes-dev
    labels:
        app: kroknes-web
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kroknes-web
    template:
        metadata:
            labels:
                app: kroknes-web
        spec:
            containers:
                - name: kroknes-web
                  image: ghcr.io/tobiaskrok/kroknes-web:latest
                  securityContext:
                      readOnlyRootFilesystem: true
                      runAsNonRoot: true
                      runAsUser: 1001
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                        name: http
                        protocol: TCP
                  resources:
                      requests:
                          cpu: 100m
                          memory: 128Mi
                      limits:
                          cpu: 500m
                          memory: 512Mi
                  livenessProbe:
                      httpGet:
                          path: /api/health
                          port: 3000
                      initialDelaySeconds: 10
                      periodSeconds: 30
                      timeoutSeconds: 3
                      failureThreshold: 3
                  readinessProbe:
                      httpGet:
                          path: /api/health
                          port: 3000
                      initialDelaySeconds: 5
                      periodSeconds: 10
                      timeoutSeconds: 3
                      failureThreshold: 3
